# rpa-tilflytter

./: @AutomationLog.txt  main.py  pyproject.toml
helpers/: ats_functions.py  config.py  helper_functions.py  pre_process_checks.py  solteq_document_handler.py  solteq_event_handler.py
processes/: application_handler.py  process_item.py  queue_handler.py
