[project]
name = "rpa_tilflytter"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
    "mbu-dev-shared-components>=3.0.0",
    "mbu-rpa-core",
    "pillow",
    "ruff",

    "mbu-solteqtand-shared-components>=1.2.1",
    "mbu_msoffice_integration>=1.0.1",
    "mbu-rpa-core",
    "mbu-process-dashboard-shared-components>=1.2.0",
    "pandas",
    "sqlalchemy >= 2.0.20",
    "sqlalchemy[asyncio] >= 2.0.20",
    "psutil",

    "mbu-dev-shared-components[solteqtand]>=4.2.1",
    "itk_dev_shared_components",
    "tzdata",
    "openpyxl",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools]
py-modules = []
